0.98_01
    Bug Fixes
    * BAIL_OUT works inside a subtest. (Larry Leszczynski) [github #138]
    * subtests now work with threads turned on. [github #145]

    Misc
    * Test::More, Test::Simple and Test::Builder::Module now require
      a minimum version of Test::Builder.  This avoids Test::More and
      Test::Builder from getting out of sync. [github #89]


0.98  Wed, 23 Feb 2011 14:38:02 +1100
    Bug Fixes
    * subtest() should not fail if $? is non-zero. (Aaron Crane)

    Docs
    * The behavior of is() and undef has been documented. (Pedro Melo)


0.97_01  Fri Aug 27 22:50:30 PDT 2010
    Test Fixes
    * Adapted the tests for the new Perl 5.14 regex stringification.
      (Karl Williamson) [github 44]

    Doc Fixes
    * Document how to test "use Foo ()". (Todd Rinaldo) [github 41]

    Feature Changes
    * subtest() no longer has a prototype.  It was just getting in the way.
      [rt.cpan.org 54239]
    * The filehandles used by default will now inherit any filehandle
      disciplines from STDOUT and STDERR IF AND ONLY IF they were applied
      before Test::Builder is loaded.  More later. [rt.cpan.org 46542]


0.96  Tue Aug 10 21:13:04 PDT 2010
    Bug Fixes
    * You can call done_testing() again after reset() [googlecode 59]

    Other
    * Bug tracker moved to github


0.95_02  Wed May 19 15:46:52 PDT 2010
    Bug Fixes
    * Correct various typos and spelling errors (Nick Cleaton)
    * Fix alignment of indented multi-line diagnostics from subtests
      (Nick Cleaton)
    * Fix incorrect operation when subtest called from within a todo block
      (Nick Cleaton)
    * Avoid spurious output after a fork within a subtest
      (Nick Cleaton)


0.95_01  Wed Mar  3 15:36:59 PST 2010
    Bug Fixes
    * is_deeply() didn't see a difference in regexes [rt.cpan.org 53469]
    * Test::Builder::Tester now sets $tb->todo_output to the output handle and
      not the error handle (to be in accordance with the default behaviour of