@@ -1,38 +1,34 @@
 #!/usr/bin/perl -w
 
-BEGIN {
-    if( $ENV{PERL_CORE} ) {
-        chdir 't';
-        @INC = qw(../lib ../lib/Test/Simple/t/lib);
-    }
-    else {
-        unshift @INC, 't/lib';
-    }
-}
+use strict;
+use warnings;
 
-use Test::More tests => 22;
+use lib 't/lib';
+use Test::More;
 
-# Using Symbol because it's core and exports lots of stuff.
-{
+note "Basic use_ok"; {
     package Foo::one;
     ::use_ok("Symbol");
     ::ok( defined &gensym,        'use_ok() no args exports defaults' );
 }
 
-{
+
+note "With one arg"; {
     package Foo::two;
     ::use_ok("Symbol", qw(qualify));
     ::ok( !defined &gensym,       '  one arg, defaults overridden' );
     ::ok( defined &qualify,       '  right function exported' );
 }
 
-{
+
+note "Multiple args"; {
     package Foo::three;
     ::use_ok("Symbol", qw(gensym ungensym));
     ::ok( defined &gensym && defined &ungensym,   '  multiple args' );
 }
 
-{
+
+note "Defining constants"; {
     package Foo::four;
     my $warn; local $SIG{__WARN__} = sub { $warn .= shift; };
     ::use_ok("constant", qw(foo bar));
@@ -40,15 +36,18 @@ use Test::More tests => 22;
     ::is( $warn, undef, 'no warning');
 }
 
-{
+
+note "use Module VERSION"; {
     package Foo::five;
     ::use_ok("Symbol", 1.02);
 }
 
-{
+
+note "use Module VERSION does not call import"; {
     package Foo::six;
     ::use_ok("NoExporter", 1.02);
 }
+
 
 {
     package Foo::seven;
@@ -59,31 +58,56 @@ use Test::More tests => 22;
     ::use_ok("Test::More", 0.47);
 }
 
-{
+
+note "Signals are preserved"; {
     package Foo::eight;
     local $SIG{__DIE__};
     ::use_ok("SigDie");
     ::ok(defined $SIG{__DIE__}, '  SIG{__DIE__} preserved');
 }
 
-{
-    BEGIN { use_ok 'strict' }
-    is eval { ()=@{"!#%^"}; 1 }, undef, 'use_ok with pragma';
-}
-is eval { ()=@{"!#%^"}; 1 }, 1, 'pragmata enabled by use_ok are lexical'; 
 
-{
+note "strict works"; {
+    no strict;
+
+    {
+        BEGIN { use_ok 'strict' }
+        ok !eval { ()=@{"!#%^"}; 1 }, 'use_ok with pragma';
+    }
+
+    ok eval { ()=@{"!#%^"}; 1 }, 'pragmata enabled by use_ok are lexical'; 
+}
+
+
+note "strict works with a version check"; {
+    no strict;
+
     BEGIN { use_ok 'strict', 1 }
-    is eval { ()=@{"!#%^"}; 1 }, undef, 'use_ok with pragma and version';
+    ok !eval { ()=@{"!#%^"}; 1 }, 'use_ok with pragma and version';
 }
 
-{
-    package that_cares_about_line_numbers;
-    my($pack,$line,$file);
-    sub import { ($pack,$file,$line) = caller }
-    my $p = __PACKAGE__;
-    my $tn = "package, file and line number from caller within import";
-    $INC{"$p.pm"}++;
-    # Keep this all on one line:
-  ::use_ok$p; ::is("$pack $file $line",join(" ",$p,__FILE__,__LINE__),$tn);
+
+note "Line numbers preserved"; {
+    my $package = "that_cares_about_line_numbers";
+
+    # Store the output of caller.
+    my @caller;
+    {
+        package that_cares_about_line_numbers;
+
+        sub import {
+            @caller = caller;
+            return;
+        }
+
+        $INC{"$package.pm"} = 1;  # fool use into thinking it's already loaded
+    }
+
+    ::use_ok($package);
+    my $line = __LINE__-1;
+    ::is( $caller[0], __PACKAGE__,      "caller package preserved" );
+    ::is( $caller[1], __FILE__,         "  file" );
+    ::is( $caller[2], $line,            "  line" );
 }
+
+done_testing;
